--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -65,6 +65,9 @@
   "form-message-placeholder": "Your message...",
   "form-submit-btn": "Send Message",
   "form-success": "Demo: Form submitted! In real version the message would be sent to the restaurant.",
+  "form-required-field": "This field is required",
+  "form-invalid-email": "Invalid email address",
   "footer-tagline": "Authentic Indonesian flavors in elegant presentation",
-  "footer-copyright": "All rights reserved."
+  "footer-copyright": "All rights reserved.",
+  "api-status-error": "An error occurred."
 }
